--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Clinton pogi</title>
+  <title>drum</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
 <body>
 
-  <h1 id="title">🥁🥁🥁🥁</h1>
+  <h1 id="title">🥁Drumset🥁</h1>
   <div class="set">
     <button class="w drum">w</button>
     <button class="a drum">a</button>
@@ -20,7 +20,6 @@
     <button class="k drum">k</button>
     <button class="l drum">l</button>
   </div>
-
 
   <footer>
     Tech Stack: HTML, CSS, Javascript
